# RinzePlayer-master

./: .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  cmake_install.cmake  main.cpp  playbackstats.cpp  playbackstats.h  resources.qrc
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Global/: Global.h
Header/: Util.h
Header/AudioPart/: AudioMetaParser.h  FFmpegAudioProcessor.h
Header/AudioPart/AudioPlay/: AudioPlayer.h
Header/AudioPart/Decode/: AudioDecoder.h
Header/Clock/: Clock.h
Header/Controller/: PlayQueueController.h  StandardController.h
Header/Factory/: AVDataFetcherFactory.h
Header/Lrc/: LyricParser.h
Header/Manager/: MusicSheetManager.h  PlaylistManager.h
Header/RingBuffer/: RingBuffer.cpp  RingBuffer.h
Header/Ui/: AudioControlBar.h  AudioPlayListWidget.h  BaseControlBar.h  HomeWidget.h  MusicPlayerWidget.h  MusicSheetUI.h  VideoPlayListWidget.h  VideoPlayerMW.h  mainwindow.h
Header/VideoPart/: BasePlayerFrame.h
Header/VideoPart/AOutput/: AudioOutput.cpp  AudioOutput.h
Header/VideoPart/AVDataFetch/: AVDataFetcher.h  LocalFileDataFetcher.h  MediaDataFetcher.cpp  MediaDataFetcher.h
Header/VideoPart/AVDecode/: AVDecoder.cpp  AVDecoder.h
Header/VideoPart/AVRes/: AVData.h
Header/VideoPart/AVSync/: AVSync.cpp  AVSync.h
Header/VideoPart/AvSourceParse/: AVSourceResolver.h
Header/VideoPart/MediaPlayer/: LocalFilePlayer.h
Header/VideoPart/OpenGLRender/: OpenGLRender.cpp  OpenGLRender.h
Header/VideoPart/ResManager/: ResMgr.cpp  ResMgr.h
LocalLRC/: 水星.lrc
LocalSheets/SheetsMeta/: 0000.json
LocalSheets/itemMeta/: item_state.json
audioeffects/: audioeffect.cpp  audioeffect.h  audiomixer.cpp  audiomixer.h  effectfactory.h
audioeffects/effects/: equalizer.cpp  equalizer.h  graphiceq.cpp  graphiceq.h  reverb.cpp  reverb.h
audioeffects/visualizers/: effectvisualizer.cpp  effectvisualizer.h  equalizervisualizer.cpp  equalizervisualizer.h  graphiceqvisualizer.cpp  graphiceqvisualizer.h  reverbvisualizer.cpp  reverbvisualizer.h
clock/: globalclock.cpp  globalclock.h
core/: clock_aligner.cpp  clock_aligner.h  mediacontroller.cpp  mediacontroller.h  sync_manager.cpp  sync_manager.h
decode/: decodebase.cpp  decodebase.h  decodesubtitle.cpp  decodevideo.cpp  decodevideo.h  decodevideo_libplacebo_complete.cpp  decodevideo_libplacebo_complete.h
demux/: demux.cpp  demux.h
docs/: pipeline.md
examples/: CMakeLists.txt  README.md  README_BUILD.md  disreg.ps1  example_main.cpp  example_setupfilter.cpp  example_setupfilter.h  feature_check.vcxproj  ffmpeg_feature_check.cpp  ffmpeg_feature_check.h  motion_detection_example.cpp  test_libplacebo_direct.cpp  vulkan_check.cpp  vulkan_check.h  如何使用.md
libplacebo/include/libplacebo/: config.h
renderer/: audioplayer.cpp  audioplayer.h  renderdata.cpp  renderdata.h  videoplayer.cpp  videoplayer.h  videorenderer.cpp  videorenderer.h
resource/: motion_vector.frag  motion_vector.geom  motion_vector.vert  shader.frag  visualizer_particle.frag  visualizer_particle.vert  visualizer_spectrum.frag  visualizer_spectrum.vert
src/: AudioControlBar.cpp  AudioPlayListWidget.cpp  BaseControlBar.cpp  BasePlayerFrame.cpp  HomeWidget.cpp  MusicPlayerWidget.cpp  MusicSheetUI.cpp  VideoPlayListWidget.cpp  VideoPlayerMW.cpp  main.cpp  mainwindow.cpp
src/Audio/: AudioMetaParser.cpp  FFmpegAudioProcessor.cpp
src/Audio/AudioPlay/: AudioPlayer.cpp
src/Audio/Decode/: AudioDecoder.cpp  AudioDecoder.cpp.backup2
src/AvSourceParse/: AVSourceResolver.cpp
src/AvSourceParse/AVDataFetch/: AVDataFetcher.cpp  LocalFileDataFetcher.cpp
src/AvSourceParse/AVRes/: AVData.cpp
src/Clock/: Clock.cpp
src/Controller/: PlayQueueController.cpp  StandardController.cpp
src/Lrc/: LyricParser.cpp
src/Manager/: MusicSheetManager.cpp  PlaylistManager.cpp
src/etc/: SongMeta.cpp  TestHeader.h  s.cpp
streaming/: chatroom_client.cpp  chatroom_client.h  debounce_manager.cpp  debounce_manager.h  exponential_backoff.cpp  exponential_backoff.h  room_session.cpp  room_session.h  status_client.cpp  status_client.h  stream_manager.cpp  stream_manager.h  streaming_types.h
ui/: chatwindow.cpp  chatwindow.h  controlbar.cpp  controlbar.h  danmakuoverlay.cpp  danmakuoverlay.h  effectspanel.cpp  effectspanel.h  exportdialog.cpp  exportdialog.h  exportworker.cpp  exportworker.h  hovercontrolbar.cpp  hovercontrolbar.h  mainwindow.cpp  mainwindow.h  motionheatmap.cpp  motionheatmap.h  motionhistory.cpp  motionhistory.h  motiontrail.cpp  motiontrail.h  pipwindow.cpp  pipwindow.h  readyoverlay.cpp  readyoverlay.h  reportdialog.cpp  reportdialog.h  reportgenerator.cpp  reportgenerator.h  roomdialog.cpp  roomdialog.h  urlplaybackconfigdialog.cpp  urlplaybackconfigdialog.h  videowidget.cpp  videowidget.h
visualizer/: audiovisualwidget.cpp  audiovisualwidget.h  fftanalyzer.cpp  fftanalyzer.h
